Fix weird go button on search page on iOS

--- a/www/ifdb.css
+++ b/www/ifdb.css
@@ -1420,6 +1420,7 @@ image file, unfortunately.
     border: none;
     vertical-align: middle;
     margin-right: 1em;
+    padding: 0;
 }
 input.save-button {
     background: url("/savechanges.gif");
